# bot_ow

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/general/: mod.rs
