[package]
name = "bot_ow"
description = "A rust port of my python version of this bot"
version = "0.1.0"
edition = "2021"
authors = [
    "Simon Zehetner <sim.zehetner@gmail.com>"
]
readme = "README.md"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
